--- a/web/index.html
+++ b/web/index.html
@@ -2,11 +2,53 @@
 
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<title></title>
+  <meta charset="utf-8" />
+    <title>Halloween Store</title>
 </head>
-
 <body>
-	
+    <header>
+        <img src="images/pumpkin.gif" alt="Pumpkin">
+        <h1>
+          The Halloween Store
+        </h1>
+        <h2> 
+          For the little Goblin in all of us!
+        </h2>
+    </header>
+    <main>
+     <h1>Welcome to my site. Please come in and stay awhile.</h1>
+     <p>I started this website because Halloween has always been my favorite
+        holiday. But during the last year, I started selling some of my 
+        favorite Halloween products, and they've become quite a hit.
+     </p>
+     <p>If you click on the Personal link, you can browse my favorite Halloween
+        pictures, stories, and films. And if you join my email list, I will 
+        keep you up-to-date on all things Halloween.
+     </p>
+     <nav>
+         <h3>
+            Product Categories 
+         </h3>
+         <ul>
+             <li><a href="products.Props.html">Props</a></li>
+             <li><a href="products.Costumes.html"> Costumes</a></li>
+             <li><a href="products.SpecialEffects.html">Special Effects</a></li>
+             <li><a href="products.Masks.html">Masks</a></li>
+         </ul>
+         <h3>
+             My Guarantee
+         </h3>
+         <p>
+             If you aren't completely satisfied with everything you buy from
+             my site, you can return it for a full refund. 
+             <b>No questions asked!</b>
+         </p>
+     </nav>
+    </main>
+    <footer>
+        <p>
+            &copy; 2016 Ben Murach
+        </p>
+    </footer>
 </body>
 </html>
