--- a/web/index.html
+++ b/web/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" type="text/css" href="styles/main.css">
   <meta charset="utf-8" />
     <title>Halloween Store</title>
 </head>
 <body>
     <header>
-        <img src="images/pumpkin.gif" alt="Pumpkin">
-        <h1>
+        <img class="pumpkin" src="images/pumpkin.gif" alt="Pumpkin">
+        <h1 class="title">
           The Halloween Store
         </h1>
         <h2> 
@@ -16,7 +18,7 @@
         </h2>
     </header>
     <main>
-     <h1>Welcome to my site. Please come in and stay awhile.</h1>
+     <h1 class="bodyhead">Welcome to my site. Please come in and stay awhile.</h1>
      <p>I started this website because Halloween has always been my favorite
         holiday. But during the last year, I started selling some of my 
         favorite Halloween products, and they've become quite a hit.
