Third Exercise complete

--- a/web/index.html
+++ b/web/index.html
@@ -8,12 +8,12 @@
     <title>Halloween Store</title>
 </head>
 <body>
-    <header>
+	<header>
         <img class="pumpkin" src="images/pumpkin.gif" alt="Pumpkin">
-        <h1 class="title">
+        <h1 class="headertext">
           The Halloween Store
         </h1>
-        <h2> 
+        <h2 class="headertext"> 
           For the little Goblin in all of us!
         </h2>
     </header>
