--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,16 @@
         </h2>
     </header>
     <main>
-     <h1 class="bodyhead">Welcome to my site. Please come in and stay awhile.</h1>
+	<nav>
+		<ul>
+             <li><a href="products/Props.html">Props</a></li>
+             <li><a href="products/Costumes.html"> Costumes</a></li>
+             <li><a href="products/SpecialEffects.html">Special Effects</a></li>
+             <li><a href="products/Masks.html">Masks</a></li>
+         </ul>
+		 </nav>
+	 <section>
+     <h1 class="bodyhead">Welcome to my site.</br>Please come in and stay awhile.</h1>
      <p>I started this website because Halloween has always been my favorite
         holiday. But during the last year, I started selling some of my 
         favorite Halloween products, and they've become quite a hit.
@@ -27,19 +36,11 @@
         pictures, stories, and films. And if you join my email list, I will 
         keep you up-to-date on all things Halloween.
      </p>
-     <nav>
-	 <p>
-         <h3>
-            Product Categories 
-         </h3>
-         <ul>
-             <li><a href="products.Props.html">Props</a></li>
-             <li><a href="products.Costumes.html"> Costumes</a></li>
-             <li><a href="products.SpecialEffects.html">Special Effects</a></li>
-             <li><a href="products.Masks.html">Masks</a></li>
-         </ul>
-		 </p>
-		 </nav>
+        <h3>
+		Product of the Week
+		</h3>
+		<img src="images/cat1.jpg" alt="DerangedCat"> </br>
+		<a href="products/cat.html">20" Deranged Cat</a>
          <h3>
              My Guarantee
          </h3>
@@ -49,6 +50,7 @@
              <b>No questions asked!</b>
          </p>
     </main>
+	</section>
     <footer>
         <p>
             &copy; 2016 Ben Murach
