--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
          </ul>
 		 </nav>
 	 <section>
-     <h1 class="bodyhead">Welcome to my site.</br>Please come in and stay awhile.</h1>
+     <h1 class="bodyhead">Welcome to my site.<br>Please come in and stay awhile.</h1>
      <p>I started this website because Halloween has always been my favorite
         holiday. But during the last year, I started selling some of my 
         favorite Halloween products, and they've become quite a hit.
@@ -39,7 +39,7 @@
         <h3>
 		Product of the Week
 		</h3>
-		<img src="images/cat1.jpg" alt="DerangedCat"> </br>
+		<img src="images/cat1.jpg" alt="DerangedCat"> <br>
 		<a href="products/cat.html">20" Deranged Cat</a>
          <h3>
              My Guarantee
@@ -49,8 +49,8 @@
              my site, you can return it for a full refund. 
              <b>No questions asked!</b>
          </p>
-    </main>
 	</section>
+    </main>
     <footer>
         <p>
             &copy; 2016 Ben Murach
