Partial horizontal bar added

--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,10 @@
         <h2 class="headertext"> 
           For the little Goblin in all of us!
         </h2>
+        <ul class ="horizontalbar">
+            <li class = "horizontalbaritem">Hello</li>
+            <li class = "horizontalbaritem">Hello</li>
+        </ul>
     </header>
     <main>
 	<nav>
