Added sidebar and horizontal bar, weird formatting issues

--- a/web/index.html
+++ b/web/index.html
@@ -16,18 +16,21 @@
         <h2 class="headertext"> 
           For the little Goblin in all of us!
         </h2>
+		</header>
         <ul class ="horizontalbar">
-            <li class = "horizontalbaritem">Hello</li>
-            <li class = "horizontalbaritem">Hello</li>
+            <li class = "horizontalbaritem"><a href="">Home</a></li>
+            <li class = "horizontalbaritem"><a href="">Product List</a></li>
+			<li class = "horizontalbaritem"><a href="">Personal</a></li>
+			<li class = "horizontalbaritem"><a href="">Decorating Ideas</a></li>
+			<li class = "horizontalbaritem"><a href="">Join Email</a></li>
         </ul>
-    </header>
     <main>
 	<nav>
-		<ul>
-             <li><a href="products/Props.html">Props</a></li>
-             <li><a href="products/Costumes.html"> Costumes</a></li>
-             <li><a href="products/SpecialEffects.html">Special Effects</a></li>
-             <li><a href="products/Masks.html">Masks</a></li>
+		<ul class = "sidebar">
+             <li class = "sidebaritem"><a href="products/Props.html">Props</a></li>
+             <li class = "sidebaritem"><a href="products/Costumes.html"> Costumes</a></li>
+             <li class = "sidebaritem"><a href="products/SpecialEffects.html">Special Effects</a></li>
+             <li class = "sidebaritem"><a href="products/Masks.html">Masks</a></li>
          </ul>
 		 </nav>
 	 <section>
