--- a/web/products/cat.html
+++ b/web/products/cat.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" type="text/css" href="styles/main.css">
+  <link rel="stylesheet" type="text/css" href="styles/cat.css">
   <meta charset="utf-8" />
     <title>Halloween Store</title>
 </head>
