--- a/web/email.html
+++ b/web/email.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" type="text/css" href="styles/main.css">
+  <link rel="stylesheet" type="text/css" href="styles/email.css">
   <meta charset="utf-8" />
     <title>Halloween Store</title>
 </head>
@@ -19,9 +19,9 @@
         <ul class ="horizontalbar">
             <li class = "horizontalbaritem"><a class="horizontalbaritemtext" href="">Home</a></li>
             <li class = "horizontalbaritem"><a class="horizontalbaritemtext" href="">Product List</a></li>
-			<li class = "horizontalbaritem"><a class="horizontalbaritemtext"  href="">Personal</a></li>
-			<li class = "horizontalbaritem"><a class="horizontalbaritemtext" href="">Decorating Ideas</a></li>
-			<li class = "horizontalbaritem"><a class="horizontalbaritemtextselected" href="">Join Email</a></li>
+            <li class = "horizontalbaritem"><a class="horizontalbaritemtext"  href="">Personal</a></li>
+            <li class = "horizontalbaritem"><a class="horizontalbaritemtext" href="">Decorating Ideas</a></li>
+            <li class = "horizontalbaritem"><a class="horizontalbaritemtextselected" href="">Join Email</a></li>
         </ul>
 		</header>
     <main>
@@ -41,25 +41,28 @@
                 <label>
                     First Name:
                 </label>
-                <input name="FName" required/>
+                <input name="FName" class="emailfield" type="text" required/>
             </p>
             <p>
                 <label>
                     Last Name:
                 </label>
-                <input name="LName" required/>
+                <input name="LName" class="emailfield" type="text" required/>
             </p>
             <p>
                 <label>
                     Email:
                 </label>
-                <input name="Email" type="email" required/>
+                <input name="Email" class="emailfield" type="email" required/>
             </p>
             <p>
                 <label>
                     Zip Code:
                 </label>
-                <input name="ZipCode" pattern="^[0-9]{5}$" required>
+                <input name="ZipCode" class="emailfield" type="text" pattern="^[0-9]{5}$" required>
+            </p>
+            <p class="button">
+                Subscribe
             </p>
         </form>
         
